--- a/src/project_website_v1/styles.css
+++ b/src/project_website_v1/styles.css
@@ -13,19 +13,20 @@ header {
     text-align: center;
 }
 
-header h1 {
-    margin: 0;
-    padding-bottom: 10px;
+nav {
+    text-align: center;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
-    text-align: center;
+    margin: 0;
+    display: inline-block; /* centers the list items in the nav */
 }
 
 nav ul li {
-    display: inline;
+    position: relative; /* Set the li to relative for absolute positioning of dropdown */
+    display: inline-block;
     margin-right: 10px;
 }
 
@@ -36,11 +37,37 @@ nav ul li a {
     background-color: #005baa; /* UdeM lighter blue */
     padding: 10px 20px;
     border-radius: 5px;
+    display: block; /* make the anchor tags behave like block elements */
     transition: background-color 0.3s;
 }
 
-nav ul li a:hover {
+nav ul li a:hover, .dropdown:hover .dropbtn {
     background-color: #003366; /* Darken on hover */
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    left: 0; /* aligns the dropdown directly under the dropdown button */
+    right: 0;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 section {
